--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -1,5 +1,5 @@
 <nav class="header__inline-menu hidden md:block col-start-1 col-span-5">
-  <ul class="list-menu list-menu--inline grid grid-cols-5" role="list">
+  <ul class="list-menu list-menu--inline grid grid-cols-5 gap-gutter" role="list">
 		 {%- for link in section.settings.menu.links limit: 5-%}
 		  <li>
 
