--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -9,9 +9,9 @@
 {% endcomment %}
 
 <details-modal class="header__search">
-  <details>
+  <details class="max-w-[max-content] relative">
     <summary class="link focus-inset modal__toggle" aria-haspopup="dialog" aria-label="{{ 'general.search.search' | t }}">
-      <span class="modal__toggle-open" aria-hidden="true" focusable="false">
+      <span class="cursor-pointer modal__toggle-open" aria-hidden="true" focusable="false">
         {{ 'general.search.search' | t }}
       </span>
     </summary>
