--- a/snippets/cart-button.liquid
+++ b/snippets/cart-button.liquid
@@ -1,4 +1,4 @@
-<a href="{{ routes.cart_url }}" class="text-link hover:underline uppercase{% if template == 'cart' %} underline{% endif %}" {% if link.current %}aria-current="page"{% endif %} id="cart-icon-bubble" role="button" >
+<a href="{{ routes.cart_url }}" class="whitespace-nowrap text-link hover:underline uppercase{% if template == 'cart' %} underline{% endif %}" {% if link.current %}aria-current="page"{% endif %} id="cart-icon-bubble" role="button" >
   <span class="hidden md:inline">Cart</span>
   <span id="cart-icon-bubble" class="text-center h4-b md:h2-b" >
     {% render 'cart-icon-bubble' %}
