decrease footer text size

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,7 +1,7 @@
 
 {% comment %}theme-check-disable UndefinedObject{% endcomment %}
 
-<footer class="flex items-end pt-17">
+<footer class="flex items-end pt-17 text-small">
   <div class="w-full padding-x py-4">
       <ul class="md:flex items-center justify-between list-none">
         {%- for link in section.settings.menu.links -%}
