--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1118,6 +1118,10 @@ body .shopify-policy__body {
   margin-bottom: -1.25rem;
 }
 
+.-ml-gutter {
+  margin-left: -10px;
+}
+
 .mb-15 {
   margin-bottom: 3.75rem;
 }
@@ -1206,10 +1210,6 @@ body .shopify-policy__body {
   margin-top: 1rem;
 }
 
-.-ml-gutter {
-  margin-left: -10px;
-}
-
 .block {
   display: block;
 }
@@ -1266,6 +1266,10 @@ body .shopify-policy__body {
   height: var(--header-height);
 }
 
+.w-1\/5 {
+  width: 20%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1299,10 +1303,6 @@ body .shopify-policy__body {
   width: 100%;
 }
 
-.w-1\/5 {
-  width: 20%;
-}
-
 .max-w-\[max-content\] {
   max-width: -moz-max-content;
   max-width: max-content;
@@ -1314,11 +1314,6 @@ body .shopify-policy__body {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-\[fit-content\] {
-  max-width: -moz-fit-content;
-  max-width: fit-content;
 }
 
 .flex-shrink {
@@ -1623,6 +1618,10 @@ body .shopify-policy__body {
   padding-bottom: 1rem;
 }
 
+.pl-gutter {
+  padding-left: 10px;
+}
+
 .pt-13 {
   padding-top: 3.25rem;
 }
@@ -1643,10 +1642,6 @@ body .shopify-policy__body {
   padding-top: 0.75rem;
 }
 
-.pl-gutter {
-  padding-left: 10px;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1657,6 +1652,12 @@ body .shopify-policy__body {
 
 .align-middle {
   vertical-align: middle;
+}
+
+.text-small {
+  font-size: 0.6875rem;
+  line-height: 1rem;
+  letter-spacing: 0.02em;
 }
 
 .uppercase {
@@ -2128,10 +2129,6 @@ body .shopify-pc__prefs__header-actions button {
     gap: 10px;
   }
 
-  .md\:gap-6 {
-    gap: 1.5rem;
-  }
-
   .md\:gap-x-gutter {
     -moz-column-gap: 10px;
          column-gap: 10px;
@@ -2147,12 +2144,6 @@ body .shopify-pc__prefs__header-actions button {
     margin-left: calc(0rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .md\:pb-0 {
     padding-bottom: 0rem;
   }
@@ -2165,6 +2156,10 @@ body .shopify-pc__prefs__header-actions button {
     padding-right: 0rem;
   }
 
+  .md\:pr-4 {
+    padding-right: 1rem;
+  }
+
   .md\:pt-15 {
     padding-top: 3.75rem;
   }
@@ -2175,10 +2170,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .md\:pt-\[5vw\] {
     padding-top: 5vw;
-  }
-
-  .md\:pr-4 {
-    padding-right: 1rem;
   }
 }
 
@@ -2257,12 +2248,6 @@ body .shopify-pc__prefs__header-actions button {
 
   .lg\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-
-  .lg\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(5rem * var(--tw-space-x-reverse));
-    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 }
 
