cross link not tied to size. fix sticky header

--- a/assets/tailwind-input.css
+++ b/assets/tailwind-input.css
@@ -32,8 +32,8 @@
     @apply focus;
   }
 
-  html, body {
-    @apply w-full h-full bg-white text-black tracking-normal;
+  body {
+    @apply bg-white text-black tracking-normal;
   }
 
   body {
