--- a/assets/base.css.liquid
+++ b/assets/base.css.liquid
@@ -33,11 +33,13 @@ html.no-js .no-js-hidden {
 html {
   box-sizing: border-box;
   font-size: 100%;
-  height: 100%;
 }
 
 body {
   text-rendering: geometricPrecision;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+  grid-template-columns: 100%;
   min-height: 100%;
   margin: 0;
 }
