--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -266,7 +266,7 @@
 {% schema %}
 {
   "name": "t:sections.header.name",
-  "class": "section-header",
+  "class": "section-header sticky top-0 z-30",
   "max_blocks": 3,
   "settings": [
     {
