--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -1,11 +1,55 @@
+{% if template == 'list-collections' %}
+	{% assign collection = collections['all'] %}
+{% endif %}
 
 <section class="padding-x">
-	{% paginate collection.products by 12 %}
+	{% paginate collection.products by section.settings.products_per_page %}
     <div class="grid grid-cols-2 grid-flow-dense md:grid-cols-3 lg:grid-cols-4 gap-x-gutter gap-y-6">
       {% for product in collection.products %}
-        {%- render 'card-product', collection: collection, section: section, card_product: product -%}
+        {%- render 'card-product', collection: collection, section: section, card_product: product, show_vendor: section.settings.show_vendor, show_rating: section.settings.show_rating, show_secondary_image: section.settings.show_secondary_image -%}
       {% endfor %}
 		</div>
 		{% render 'pagination', paginate: paginate %}
 	{% endpaginate %}
 </section>
+
+{% schema %}
+{
+  "name": "t:sections.main-collection-product-grid.name",
+  "class": "section",
+  "settings": [
+    {
+      "type": "range",
+      "id": "products_per_page",
+      "min": 8,
+      "max": 24,
+      "step": 4,
+      "default": 16,
+      "label": "t:sections.main-collection-product-grid.settings.products_per_page.label"
+    },
+    {
+      "type": "header",
+      "content": "t:sections.main-collection-product-grid.settings.header__3.content"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_secondary_image",
+      "default": true,
+      "label": "t:sections.main-collection-product-grid.settings.show_secondary_image.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_vendor",
+      "default": true,
+      "label": "t:sections.main-collection-product-grid.settings.show_vendor.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_rating",
+      "default": false,
+      "label": "t:sections.main-collection-product-grid.settings.show_rating.label",
+      "info": "t:sections.main-collection-product-grid.settings.show_rating.info"
+    }
+  ]
+}
+{% endschema %}
