--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -12,7 +12,7 @@
               </div>
             </h2>
             {% for product in collection.products limit: 3 %}
-              {%- render 'card-product', collection: collection, section: section, card_product: product -%}
+              {%- render 'card-product', collection: collection, section: section, card_product: product, show_secondary_image: section.settings.show_secondary_image, show_vendor: section.settings.show_vendor, show_rating: section.settings.show_rating -%}
             {% endfor %}
           </div>
         </li>
@@ -41,6 +41,27 @@
           "id": "show_image"
         }
       ]
+    }
+  ],
+  "settings": [
+    {
+      "type": "checkbox",
+      "id": "show_secondary_image",
+      "default": true,
+      "label": "t:sections.main-collection-product-grid.settings.show_secondary_image.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_vendor",
+      "default": true,
+      "label": "t:sections.main-collection-product-grid.settings.show_vendor.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_rating",
+      "default": false,
+      "label": "t:sections.main-collection-product-grid.settings.show_rating.label",
+      "info": "t:sections.main-collection-product-grid.settings.show_rating.info"
     }
   ]
 }
