--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -11,24 +11,28 @@
 			    use_padding: true
 			  %}
 
-				{% assign secondary_image = card_product.images[1] %}
-			  {% for image in card_product.images %}
-					{% if image.alt contains 'hover' %}
-						{% assign secondary_image = image %}
-						{% break %}
-					{% endif %}
-				{% endfor %}
+				{% if show_secondary_image %}
 
-				{% if secondary_image %}
-					{% render 'image',
-						image: secondary_image,
-				    preload: true,
-				    fit: 'cover',
-						aspect_ratio: true,
-				    sizes: sizes,
-				    use_padding: false,
-				    class: 'product-card__image absolute inset-0 w-full h-full'
-				  %}
+					{% assign secondary_image = card_product.images[1] %}
+				  {% for image in card_product.images %}
+						{% if image.alt contains 'hover' %}
+							{% assign secondary_image = image %}
+							{% break %}
+						{% endif %}
+					{% endfor %}
+
+					{% if secondary_image %}
+						{% render 'image',
+							image: secondary_image,
+					    preload: true,
+					    fit: 'cover',
+							aspect_ratio: true,
+					    sizes: sizes,
+					    use_padding: false,
+					    class: 'product-card__image absolute inset-0 w-full h-full'
+					  %}
+					{% endif %}
+
 				{% endif %}
 			</div>
 
@@ -37,12 +41,12 @@
 			<a class="absolute inset-0 z-10 block" tabindex="-1" aria-hidden="true" title="{{ card_product.title }}" href="{{ card_product.url | within: collection }}"></a>
 		</div>
 
-		<div class="relative">
+		<div class="relative mt-1 ">
 			
-			{% if card_product.vendor != blank %}
+			{% if show_vendor and card_product.vendor != blank %}
 				{% capture handle %}{{ card_product.vendor | handleize }}{% endcapture %}
 				{% assign vendor_collection = collections[handle]%}
-				<p class="mt-1 text-gray product-card--vendor">
+				<p class="text-gray product-card--vendor">
 					{% if vendor_collection != blank %}<a class="hover:underline" href="{{ vendor_collection.url }}">{% endif %}
 						{{ card_product.vendor }}
 					{% if vendor_collection != blank %}</a>{% endif %}
@@ -51,7 +55,44 @@
 			
 			<div class="flex space-x-3">
 				<h3 class="product-card--title"><a class="text-link" title="{{ card_product.title }}" href="{{ card_product.url | within: collection }}">{{ card_product.title }}</a></h3>{%- render 'price', product: card_product, use_variant: false -%}
-		</div>
+			</div>
+
+			{%- if show_rating and card_product.metafields.reviews.rating.value != blank -%}
+        {% liquid
+          assign rating_decimal = 0
+          assign decimal = card_product.metafields.reviews.rating.value.rating | modulo: 1
+          if decimal >= 0.3 and decimal <= 0.7
+            assign rating_decimal = 0.5
+          elsif decimal > 0.7
+            assign rating_decimal = 1
+          endif
+        %}
+        <div
+          class="rating"
+          role="img"
+          aria-label="{{ 'accessibility.star_reviews_info' | t: rating_value: card_product.metafields.reviews.rating.value, rating_max: card_product.metafields.reviews.rating.value.scale_max }}"
+        >
+          <span
+            aria-hidden="true"
+            class="rating-star"
+            style="--rating: {{ card_product.metafields.reviews.rating.value.rating | floor }}; --rating-max: {{ card_product.metafields.reviews.rating.value.scale_max }}; --rating-decimal: {{ rating_decimal }};"
+          ></span>
+        </div>
+        <p class="rating-text caption">
+          <span aria-hidden="true">
+            {{- card_product.metafields.reviews.rating.value }} /
+            {{ card_product.metafields.reviews.rating.value.scale_max -}}
+          </span>
+        </p>
+        <p class="rating-count caption">
+          <span aria-hidden="true">({{ card_product.metafields.reviews.rating_count }})</span>
+          <span class="visually-hidden">
+            {{- card_product.metafields.reviews.rating_count }}
+            {{ 'accessibility.total_reviews' | t -}}
+          </span>
+        </p>
+      {%- endif -%}
+
 		</div>
 	{% else %}
 
