--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -23,7 +23,7 @@ md:col-end-13
 <div class="pt-15 mb-25 lg:mb-35 padding-x md:grid md:grid-cols-12">
   <div class="w-full md:col-start-{{ start }} md:col-end-{{ end }}">
     {% if section.settings.url != blank %}
-      <a class="section" class="block" href="{{ section.settings.url }}" title="{{ text }}">
+      <a class="block" href="{{ section.settings.url }}" title="{{ text }}">
     {% endif %}
 
       <figure>
