--- a/assets/base.css.liquid
+++ b/assets/base.css.liquid
@@ -46,7 +46,7 @@ body {
 
 
 .shopify-challenge__container {
-  min-height: calc(100vh - var(--header-height) - var(--announcement-bar-height));
+  min-height: 100%;
 }
 
 .skip-to-content-link:focus {
