--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -68,6 +68,8 @@
 
   <body class="template-{{ template.name }}{% if template.suffix != blank %} template-{{ template.name }}--{{template.suffix }}{% endif %}">
 
+
+
     <a class="skip-to-content-link visually-hidden sr-only" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
     </a>
@@ -80,9 +82,10 @@
     
     <main id="MainContent" class="relative z-10 grow content-for-layout focus-none w-full" role="main" tabindex="-1">
       {{ content_for_layout }}
+
     </main>
 
-    {% section 'footer' %}
+    {% sections 'footer-group' %}
 
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
