--- a/snippets/icon-close.liquid
+++ b/snippets/icon-close.liquid
@@ -1,4 +1,4 @@
-<svg class="icon icon-close" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg class="icon icon-close {{ class }}" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
   <path d="M1 1L15 15" stroke="black"/>
   <path d="M15 1L1.00001 15" stroke="black"/>
   </svg>
