--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1135,6 +1135,18 @@ body .shopify-policy__body {
   grid-column: span 5 / span 5;
 }
 
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -1147,8 +1159,28 @@ body .shopify-policy__body {
   grid-column-start: 8;
 }
 
+.col-start-4 {
+  grid-column-start: 4;
+}
+
+.col-start-10 {
+  grid-column-start: 10;
+}
+
 .col-end-13 {
   grid-column-end: 13;
+}
+
+.col-end-\[-1\] {
+  grid-column-end: -1;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
+}
+
+.row-end-\[-1\] {
+  grid-row-end: -1;
 }
 
 .mx-auto {
@@ -1350,6 +1382,10 @@ body .shopify-policy__body {
   height: 0rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .w-1\/5 {
   width: 20%;
 }
@@ -1393,6 +1429,10 @@ body .shopify-policy__body {
 
 .w-0 {
   width: 0rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .max-w-\[max-content\] {
@@ -1520,6 +1560,14 @@ body .shopify-policy__body {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-\[auto_1fr\] {
+  grid-template-columns: auto 1fr;
+}
+
+.grid-rows-\[auto_1fr\] {
+  grid-template-rows: auto 1fr;
 }
 
 .flex-col {
@@ -2203,6 +2251,14 @@ body .shopify-pc__prefs__header-actions button {
     grid-column: span 8 / span 8;
   }
 
+  .md\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
+  .md\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+
   .md\:col-start-1 {
     grid-column-start: 1;
   }
@@ -2229,6 +2285,10 @@ body .shopify-pc__prefs__header-actions button {
 
   .md\:col-start-\[17\] {
     grid-column-start: 17;
+  }
+
+  .md\:col-start-10 {
+    grid-column-start: 10;
   }
 
   .md\:col-end-10 {
@@ -2261,6 +2321,10 @@ body .shopify-pc__prefs__header-actions button {
 
   .md\:col-end-\[16\] {
     grid-column-end: 16;
+  }
+
+  .md\:row-start-auto {
+    grid-row-start: auto;
   }
 
   .md\:mb-0 {
@@ -2351,6 +2415,10 @@ body .shopify-pc__prefs__header-actions button {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
+  .md\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
+
   .md\:gap-5 {
     gap: 1.25rem;
   }
@@ -2420,6 +2488,10 @@ body .shopify-pc__prefs__header-actions button {
     grid-column: span 6 / span 6;
   }
 
+  .lg\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+
   .lg\:col-start-3 {
     grid-column-start: 3;
   }
@@ -2468,6 +2540,18 @@ body .shopify-pc__prefs__header-actions button {
     width: 1.25rem;
   }
 
+  .lg\:w-1\/6 {
+    width: 16.666667%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
   .lg\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -2482,6 +2566,10 @@ body .shopify-pc__prefs__header-actions button {
 }
 
 @media (min-width: 1280px) {
+  .xl\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
   .xl\:col-start-3 {
     grid-column-start: 3;
   }
@@ -2496,5 +2584,9 @@ body .shopify-pc__prefs__header-actions button {
 
   .xl\:w-25 {
     width: 6.25rem;
+  }
+
+  .xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 }
