--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -10,10 +10,8 @@
   <script src="{{ 'cart.js' | asset_url }}" defer="defer"></script>
 {%- endunless -%}
 
-<cart-items class="padding-x max-w-screen-lg mb-15 md:mb-20 {% if cart == empty %}is-empty{% endif %}">
-  <div class="title-wrapper-with-link mt-9 mb-6 md:mb-9 ">
-    <h1 class="title uppercase">{{ 'sections.cart.title' | t }}</h1>
-  </div>
+<cart-items class="padding-x {% if cart == empty %}is-empty{% endif %}">
+  <h1 class="uppercase">{{ 'sections.cart.title' | t }}</h1>
 
   <div class="cart__warnings">
     <h1 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h1>
@@ -22,14 +20,14 @@
     </a>
 
     {%- if shop.customer_accounts_enabled and customer == null -%}
-      <h2 class="cart__login-title">{{ 'sections.cart.login.title' | t }}</h2>
+      <h2 class="cart__login-title uppercase">{{ 'sections.cart.login.title' | t }}</h2>
       <p class="cart__login-paragraph">
         {{ 'sections.cart.login.paragraph_html' | t: link: routes.account_login_url }}
       </p>
     {%- endif -%}
   </div>
 
-  <form action="{{ routes.cart_url }}" class="cart__contents  critical-hidden" method="post" id="cart">
+  <form action="{{ routes.cart_url }}" class="cart__contents mt-text-line critical-hidden" method="post" id="cart">
     <div class="cart__items" id="main-cart-items" data-id="{{ section.id }}">
       <div class="js-contents">
         {%- if cart != empty -%}
@@ -39,8 +37,8 @@
             </caption>
             <tbody>
               {%- for item in cart.items -%}
-                <tr class="cart-item" id="CartItem-{{ item.index | plus: 1 }}">
-                  <td class="cart-item__media relative w-25 md:w-35">
+                <tr class="grid-flow-dense cart-item grid grid-rows-[auto_1fr] md:grid-rows-1 grid-cols-12 gap-gutter" id="CartItem-{{ item.index | plus: 1 }}">
+                  <td class="row-start-1 row-end-[-1] col-span-3 md:col-span-2 xxl:col-span-1 cart-item__media relative">
                     {% if item.image %}
                       {% comment %} Leave empty space due to a:empty CSS display: none rule {% endcomment %}
                       <a class="absolute z-10 inset-0" href="{{ item.url }}" class="cart-item__link" aria-hidden="true" tabindex="-1"></a>
@@ -55,21 +53,21 @@
                     {% endif %}
                   </td>
 
-                  <td class="cart-item__details">
+                  <td class="col-start-4 col-span-6 md:col-span-5 cart-item__details">
                     {%- if settings.show_vendor -%}
                       <p class="caption-with-letter-spacing">{{ item.product.vendor }}</p>
                     {%- endif -%}
 
                     <a href="{{ item.url }}" tite="{{ item.title }}" class="text-link cart-item__name">
                       <span class="uppercase">{{ item.product.metafields.descriptors.title | default: item.product.title | escape }}</span>
-                    {% if item.product.metafields.descriptors.title != blank and item.product.metafields.descriptors.subtitle != blank %}<span class="block mt-1">{{ item.product.metafields.descriptors.subtitle }}</span>{% endif %}
+                    {% if item.product.metafields.descriptors.title != blank and item.product.metafields.descriptors.subtitle != blank %}<span class="block">{{ item.product.metafields.descriptors.subtitle }}</span>{% endif %}
                     </a>
 
                     {%- if item.product.has_only_default_variant == false
                       or item.properties.size != 0
                       or item.selling_plan_allocation != null
                     -%}
-                      <dl class="mt-2 md:mt-4">
+                      <dl class="">
                         {%- if item.product.has_only_default_variant == false -%}
                           {%- for option in item.options_with_values -%}
                             <div class="product-option">
@@ -101,10 +99,10 @@
                       <p class="product-option">{{ item.selling_plan_allocation.selling_plan.name }}</p>
                     {%- endif -%}
 
-                    <div class="mt-2 md:mt-4">
+                    <div class="">
 
                       {%- if item.original_price != item.final_price -%}
-                        <div class="mt-1 cart-item__discounted-prices">
+                        <div class="cart-item__discounted-prices">
                           <span class="visually-hidden">
                             {{ 'products.product.price.regular_price' | t }}
                           </span>
@@ -119,14 +117,14 @@
                           </strong>
                         </div>
                       {%- else -%}
-                        <div class="mt-1 product-option">
+                        <div class="product-option">
                           {{ item.original_price | money }}
                         </div>
                       {%- endif -%}
 
-                      <ul class="mt-1 discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
+                      <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
                         {%- for discount in item.discounts -%}
-                          <li class="discounts__discount mt-1">
+                          <li class="discounts__discount">
                             {%- render 'icon-discount' -%}
                             {{ discount.title }}
                           </li>
@@ -134,7 +132,7 @@
                       </ul>
                     </div>
 
-                    <div class="mt-2 md:mt-4">
+                    <div class="">
                       {% assign new_inventory_quantity = item.variant.inventory_quantity | minus: item.quantity %}
                       {%- if item.variant.inventory_management == 'shopify' and new_inventory_quantity < 0 and item.variant.inventory_policy == 'continue' -%}
                         {% assign preorder_text = item.product.metafields.custom.cart_preorder_text | default: section.settings.preorder_text %}
@@ -145,7 +143,7 @@
                   </td>
 
 
-                  <td class="cart-item__quantity">
+                  <td class="col-start-4 col-span-6 md:col-span-3 cart-item__quantity">
                     <div class="cart-item__quantity-wrapper">
                       <label class="visually-hidden" for="Quantity-{{ item.index | plus: 1 }}">
                         {{ 'products.product.quantity.label' | t }}
@@ -192,7 +190,7 @@
                           class=""
                           aria-label="{{ 'sections.cart.remove_title' | t: title: item.title }}"
                         >
-                          {% render 'icon-remove' %}
+                          &times;
                         </a>
                       </cart-remove-button>
                     </div>
@@ -212,7 +210,7 @@
                     </div>
                   </td>
 
-                  <td class="cart-item__totals right">
+                  <td class="col-span-3 md:col-span-2 lg:col-span-1 cart-item__totals">
                     <div class="loading-overlay hidden">
                       <div class="loading-overlay__spinner">
                         <svg
@@ -226,7 +224,7 @@
                         </svg>
                       </div>
                     </div>
-                    <div class="cart-item__price-wrapper  md:mt-2">
+                    <div class="cart-item__price-wrapper text-right">
                       {%- if item.original_line_price != item.final_line_price -%}
                         <dl class="cart-item__discounted-prices">
                           <dt class="visually-hidden">
