add newsletter to pw page

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -24,11 +24,12 @@
   </head>
 
   <body class="password">
-    <a class="skip-to-content-link button sr-only" href="#MainContent">
+    <header class="h-header p-4 flex justify-center w-full"><h1>{% render 'logo.svg' %}</h1></header>
+    <a class="skip-to-content-link sr-only" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
 
-    <main id="MainContent" class="password-main">
+    <main id="MainContent" class="grow password-main">
       {{ content_for_layout }}
     </main>
 
