--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1103,6 +1103,10 @@ body .shopify-policy__body {
   top: -22.5rem;
 }
 
+.left-10 {
+  left: 2.5rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1312,6 +1316,14 @@ body .shopify-policy__body {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .block {
@@ -1795,6 +1807,11 @@ body .shopify-policy__body {
   padding-right: 1rem;
 }
 
+.py-text-line {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -2141,9 +2158,65 @@ body .shopify-pc__prefs__header-actions button {
   background-color: transparent;
 }
 
+.focus-within\:not-sr-only:focus-within {
+  position: static;
+  width: auto;
+  height: auto;
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  clip: auto;
+  white-space: normal;
+}
+
+.focus-within\:absolute:focus-within {
+  position: absolute;
+}
+
+.focus-within\:top-40:focus-within {
+  top: 10rem;
+}
+
+.focus-within\:top-10:focus-within {
+  top: 2.5rem;
+}
+
+.focus-within\:left-1\/2:focus-within {
+  left: 50%;
+}
+
+.focus-within\:top-30:focus-within {
+  top: 7.5rem;
+}
+
+.focus-within\:top-20:focus-within {
+  top: 5rem;
+}
+
+.focus-within\:top-15:focus-within {
+  top: 3.75rem;
+}
+
+.focus-within\:h-auto:focus-within {
+  height: auto;
+}
+
+.focus-within\:w-auto:focus-within {
+  width: auto;
+}
+
 .focus-within\:translate-y-0:focus-within {
   --tw-translate-y: 0rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.focus-within\:-translate-x-1\/2:focus-within {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.focus-within\:border:focus-within {
+  border-width: 1px;
 }
 
 .hover\:text-black:hover {
@@ -2176,8 +2249,16 @@ body .shopify-pc__prefs__header-actions button {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.focus\:ring-offset-0:focus {
+  --tw-ring-offset-width: 0px;
+}
+
 .focus-visible\:ring-inset:focus-visible {
   --tw-ring-inset: inset;
+}
+
+.focus-visible\:ring-offset-0:focus-visible {
+  --tw-ring-offset-width: 0px;
 }
 
 @media (min-width: 640px) {
