--- a/templates/password.liquid
+++ b/templates/password.liquid
@@ -1,34 +1,90 @@
 {% layout 'password' %}
-<div class="max-w-xs mx-auto w-full h-[100vh] text-center flex items-center">
+<div class="sr-only focus-within:not-sr-only focus-within:absolute focus-within:w-auto focus-within:h-auto focus-within:top-20 focus-within:left-1/2 focus-within:-translate-x-1/2">
+  {%- form 'storefront_password' -%}
+    <div class="password-field field{% if form.errors %} password-field--error{% endif %}">
+      <input
+        type="password"
+        name="password"
+        id="Password"
+          class="block w-full border-b border-b-black focus:ring-0 focus-visble:ring-0 focus:ring-offset-0 focus-visible:ring-offset-0"
+        autocomplete="current-password"
+        {% if form.errors %}
+          aria-invalid="true"
+          aria-describedby="PasswordLoginForm-password-error"
+        {%- endif -%}
+        placeholder="{{ 'general.password_page.login_form_password_placeholder' | t }}"
+      >
+      <label class="block sr-only" for="{{ 'general.password_page.login_form_password_label' | t }}">{{ 'general.password_page.login_form_password_placeholder' | t }}</label>
+      {%- if form.errors -%}
+        <div id="PasswordLoginForm-password-error" class="mt-1" role="status">
+          <span class="sr-only">{{ 'accessibility.error' | t }}</span>
+          <span class="w-5 align-middle inline-block mr-1">{% render 'icon-error' %}</span><span class="align-middle">{{ 'general.password_page.login_form_error' | t }}</span>
+        </div>
+      {%- endif -%}
+    </div>
+    <button name="commit" class="mt-3 button">
+      {{ 'general.password_page.login_form_submit' | t }}
+    </button>
+  {%- endform -%}
+</div>
+
+<div class="max-w-xs mx-auto w-full text-center flex items-center mt-40">
   <div class=" w-full">
-    <h1 id="DialogHeading" class="h5">
-      {{ 'general.password_page.login_form_heading' | t }}
-    </h1>
-    {%- form 'storefront_password', class: 'password-form mt-8' -%}
-      <div class="password-field field{% if form.errors %} password-field--error{% endif %}">
+    {% form 'customer', class: 'newsletter-form' %}
+      <h1 class="uppercase">Coming Soon</h1>
+
+      <div class="py-text-line">Sign up to be notified when we launch.</div>
+
+      <input type="hidden" name="contact[tags]" value="newsletter">
+      <div class="field">
+        <label class="sr-only" for="NewsletterForm--{{ section.id }}">
+          {{ 'newsletter.label' | t }}
+        </label>
         <input
-          type="password"
-          name="password"
-          id="Password"
-          class="bg-transparent autofill:bg-transparent block w-full p-1 text-black placeholder-black text-center border border-black bg-white"
-          autocomplete="current-password"
+          id="NewsletterForm--{{ section.id }}"
+          type="email"
+          name="contact[email]"
+          class="block w-full border-b border-b-black focus:ring-0"
+          value="{{ form.email }}"
+          aria-required="true"
+          autocorrect="off"
+          autocapitalize="off"
+          autocomplete="email"
           {% if form.errors %}
             aria-invalid="true"
-            aria-describedby="PasswordLoginForm-password-error"
-          {%- endif -%}
-          placeholder="{{ 'general.password_page.login_form_password_placeholder' | t }}"
+            aria-describedby="Newsletter-error--{{ section.id }}"
+          {% elsif form.posted_successfully? %}
+            aria-describedby="Newsletter-success--{{ section.id }}"
+          {% endif %}
+          placeholder="{{ 'newsletter.label' | t }}"
+          required
         >
-        <label class="block sr-only" for="{{ 'general.password_page.login_form_password_label' | t }}">{{ 'general.password_page.login_form_password_placeholder' | t }}</label>
+        <button
+          type="submit"
+          class="mt-text-line button w-full"
+          name="commit"
+          id="Subscribe"
+          aria-label="{{ 'newsletter.button_label' | t }}"
+        >
+          Subscribe
+        </button>
         {%- if form.errors -%}
-          <div id="PasswordLoginForm-password-error" class="mt-1" role="status">
-            <span class="sr-only">{{ 'accessibility.error' | t }}</span>
-            <span class="w-5 align-middle inline-block mr-1">{% render 'icon-error' %}</span><span class="align-middle">{{ 'general.password_page.login_form_error' | t }}</span>
-          </div>
+          <small class="newsletter-form__message form__message" id="Newsletter-error--{{ section.id }}">
+            {{- form.errors.translated_fields.email | capitalize }}
+            {{ form.errors.messages.email -}}
+          </small>
         {%- endif -%}
       </div>
-      <button name="commit" class="mt-3 button button--reverse">
-        {{ 'general.password_page.login_form_submit' | t }}
-      </button>
-    {%- endform -%}
+      {%- if form.posted_successfully? -%}
+        <h3
+          class="mt-text-line newsletter-form__message newsletter-form__message--success form__message"
+          id="Newsletter-success--{{ section.id }}"
+          tabindex="-1"
+        >
+          {{- 'newsletter.success' | t }}
+        </h3>
+      {%- endif -%}
+    {% endform %}
+
   </div>
 </div>
